Fix header overflow on smaller screens

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -146,6 +146,10 @@ blockquote { /* Blockquotes */
     padding: 0 1em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    word-break: break-word;
+}
+
 /* GitHub Styled Tables */
 
 table {
